  @startuml

class ChangeProfileUI {}

class ChangeProfileController {
profileList : ProfileList
accountList : AccountList
changeProfile(email, newProfileName)
}


class AccountList {
account : List<Account>
getAccount(email)
}

class ProfileList {
profiles : List<Profile>
getProfile(profileName)
}

class Account {
name : String
email : String
phone : String
photo : Photo
profile : Profile
isActive : boolean
}

ChangeProfileUI "1" o-- "1" ChangeProfileController
ChangeProfileController "1" o-- "1" AccountList
ChangeProfileController  "1" o-- "1"  ProfileList
ChangeProfileController ..> Account
AccountList "1" *-- "*" Account : has

@enduml